fix: fixes unreadable text in light mode

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,12 +30,14 @@
 tooltip {
     background-color: rgba(p.$base, 0.8);
     border-radius: 10px;
+    color: p.$text;
 }
 
 menu {
     background-color: p.$base;
     border-radius: 10px;
     padding: 5px;
+    color: p.$text;
 }
 
 menuitem {
@@ -43,6 +45,7 @@ menuitem {
     margin: 2px 0;
     border-radius: 8px;
     transition: background-color 0.2s;
+    color: p.$text;
 
     &:hover {
         background-color: p.$surface1;
@@ -51,6 +54,7 @@ menuitem {
 
 separator {
     background-color: p.$surface2;
+    color: p.$text;
 }
 
 #LEFT {
